[project]
name = "ComfyUI-WtlNodes"
description = "This node adds improvement over some already existing nodes as well as some custom nodes."
version = "1.1.3"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "scipy",
    "pillow",
]

[project.urls]
Repository = "https://github.com/Scorpiosis0/ComfyUI-WtlNodes"
Documentation = "https://github.com/Scorpiosis0/ComfyUI-WtlNodes/wiki"
"Bug Tracker" = "https://github.com/Scorpiosis0/ComfyUI-WtlNodes/issues"

[tool.comfy]
PublisherId = "writili"
DisplayName = "ComfyUI-WtlNodes"
Icon = ""
